Update page ESMULTI esmulti_3567ba2de07b45f59182921b228a639cd2322af3

--- a/p/esmulti_3567ba2de07b45f59182921b228a639cd2322af3/index.html
+++ b/p/esmulti_3567ba2de07b45f59182921b228a639cd2322af3/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Homem acusado de matar empresário Dantinho tem novo mandado de prisão cumprido no ES</title>
-  <meta name="description" content="Polícia Civil do Espírito Santo cumpriu mandado de prisão preventiva contra homem já preso pelo assassinato de Dante Michelini, por tentativa de latrocínio em Guarapari."/>
+  <title>Polícia Civil do ES cumpre novo mandado de prisão contra acusado de matar empresário Dante Michelini</title>
+  <meta name="description" content="Homem preso pelo assassinato de Dante Michelini teve mandado de prisão preventiva cumprido por tentativa de latrocínio em Guarapari."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_3567ba2de07b45f59182921b228a639cd2322af3/"/>
-  <meta property="og:title" content="Homem acusado de matar empresário Dantinho tem novo mandado de prisão cumprido no ES"/>
-  <meta property="og:description" content="Polícia Civil do Espírito Santo cumpriu mandado de prisão preventiva contra homem já preso pelo assassinato de Dante Michelini, por tentativa de latrocínio em Guarapari."/>
+  <meta property="og:title" content="Polícia Civil do ES cumpre novo mandado de prisão contra acusado de matar empresário Dante Michelini"/>
+  <meta property="og:description" content="Homem preso pelo assassinato de Dante Michelini teve mandado de prisão preventiva cumprido por tentativa de latrocínio em Guarapari."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fguarapari-1.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fguarapari-1.jpg"/>
@@ -21,17 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Homem acusado de matar empresário Dantinho tem novo mandado de prisão cumprido no ES</h1>
+    <h1>Polícia Civil do ES cumpre novo mandado de prisão contra acusado de matar empresário Dante Michelini</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fguarapari-1.jpg" alt="Homem acusado de matar empresário Dantinho tem novo mandado de prisão cumprido no ES" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fguarapari-1.jpg" alt="Polícia Civil do ES cumpre novo mandado de prisão contra acusado de matar empresário Dante Michelini" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Polícia Civil do Espírito Santo cumpriu mandado de prisão preventiva contra homem já preso pelo assassinato de Dante Michelini, por tentativa de latrocínio em Guarapari.</p>
-<p>O mandado de prisão preventiva foi cumprido pela Delegacia Especializada de Investigações Criminais (Deic) de Guarapari e é referente a uma tentativa de latrocínio ocorrida em 18 de janeiro no Centro de Guarapari. Na ocasião, o suspeito teria roubado um celular e golpeado a vítima com uma faca na região do coração, que conseguiu se defender e sofreu apenas escoriações.</p>
-<p>O investigado já estava preso pelo assassinato do empresário Dante Brito Michelini, conhecido como Dantinho, cujo corpo foi encontrado decapitado em 2 de fevereiro em um sítio na região de Meaípe. Ele confessou o crime e indicou onde descartou a cabeça da vítima, que foi localizada no mar de Guarapari com apoio do Corpo de Bombeiros.</p>
-<p>Com o cumprimento do novo mandado, o suspeito permanece no sistema prisional e passa a responder também pela tentativa de latrocínio registrada em janeiro.</p>
-<p>O crime que resultou na morte de Dante Michelini teve repercussão nacional e, Ele relatou ter sido agredido pelo empresário após invadir sua propriedade, e que pessoas próximas teriam zombado dele, associando Dantinho a um caso antigo de estupro, conhecido como caso Araceli.</p>
-<p>O suspeito afirmou que, movido pela raiva das provocações, planejou e executou o assassinato de forma violenta, ateando fogo na residência da vítima. Um dia após o crime, ele voltou ao local, usou drogas e disse ter &quot;conversado com o corpo&quot; da vítima. Declarou ainda sentir orgulho de ter matado um estuprador.</p>
-<p>O delegado-geral da Polícia Civil do Espírito Santo, José Darcy Arruda, destacou que o histórico envolvendo o nome da vítima no caso Araceli não pode ser descartado como motivação, assim como questões relacionadas à venda do imóvel e ao relacionamento familiar. O delegado Fabrício Dutra classificou o suspeito como perigoso e violento, e apontou que o crime pode ter sido motivado também pela tentativa de obter prestígio em ambientes ligados ao tráfico de drogas.</p>
+    <p class="lead">Homem preso pelo assassinato de Dante Michelini teve mandado de prisão preventiva cumprido por tentativa de latrocínio em Guarapari.</p>
+<p>A Polícia Civil do Espírito Santo cumpriu um novo mandado de prisão preventiva contra o homem acusado de assassinar o empresário Dante Brito Michelini, conhecido como Dantinho. Ele já estava preso pelo homicídio quando a nova ordem judicial foi executada.</p>
+<p>O mandado é referente a uma tentativa de latrocínio ocorrida em 18 de janeiro no Centro de Guarapari. Na ocasião, o suspeito roubou um celular e desferiu um golpe de faca em direção ao coração da vítima, que conseguiu se defender e sofreu apenas escoriações.</p>
+<p>O corpo de Dante Michelini foi encontrado decapitado em 2 de fevereiro em um sítio na região de Meaípe. O acusado confessou o crime e indicou onde descartou a cabeça, que foi localizada no mar de Guarapari com apoio do Corpo de Bombeiros.</p>
+<p>Ele também relatou ter ateado fogo na residência da vítima e ter conversado com o corpo em estado alterado.</p>
+<p>Autoridades destacaram que o histórico envolvendo o nome da vítima, incluindo o caso Araceli, pode ter influenciado o crime. O delegado-geral da PCES ressaltou que outros fatores, como questões familiares e venda do imóvel, também serão apurados.</p>
+<p>O delegado Fabrício Dutra classificou o suspeito como perigoso e violento, e apontou que a motivação pode incluir busca por prestígio em ambientes ligados ao tráfico de drogas, além da vingança.</p>
   </div>
 </body>
 </html>
